--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -116,7 +116,7 @@ p {
   overflow: hidden;
 }
 
-.header-wrapper:before {
+.header-wrapper:before, .ikea-wrapper:before {
   content: "";
   width: 100%;
   height: 100%;
@@ -231,6 +231,73 @@ p {
   color: var(--main-dark);
   margin-bottom: 30px;
   display: block;
+}
+
+.ikea-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.article-tag {
+  font-family: Neucha, sans-serif;
+  font-size: 24px;
+  line-height: 1.2em;
+  color: var(--dark-50);
+  padding-top: 2px;
+  display: block;
+}
+
+.article-img {
+  margin-bottom: 100px;
+  box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.15);
+}
+
+.ikea-wrapper h2 {
+  margin: 4px 0;
+  color: var(--dark);
+}
+
+.ikea-wrapper h3 {
+  margin: 28px 0;
+  color: var(--dark);
+}
+
+.article-title {
+  background-color: var(--brown);
+  color: var(--white);
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
+  line-height: 1.2em;
+  padding: 5px 10px;
+}
+
+.column-wrapper {
+  clear: both;
+  column-count: 2;
+  column-gap: 30px;
+}
+
+.article-title {
+  column-span: all;
+  margin-top: 0;
+  margin-bottom: 19px;
+}
+
+.first-el {
+  margin-top: 0;
+}
+
+.float-left {
+  float: left;
+}
+
+.margin-right30 {
+  margin-right: 30px;
+}
+
+.margin-left30 {
+  margin-left: 30px;
 }
 
 footer {
