--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -116,7 +116,9 @@ p {
   overflow: hidden;
 }
 
-.header-wrapper:before, .ikea-wrapper:before {
+.header-wrapper:before,
+.ikea-wrapper:before,
+.premature-wrapper:before {
   content: "";
   width: 100%;
   height: 100%;
@@ -242,7 +244,6 @@ p {
   font-family: Neucha, sans-serif;
   font-size: 24px;
   line-height: 1.2em;
-  color: var(--dark-50);
   padding-top: 2px;
   display: block;
 }
@@ -252,24 +253,62 @@ p {
   box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.15);
 }
 
-.ikea-wrapper h2 {
-  margin: 4px 0;
+.dark-text .article-tag {
+  color: var(--dark-50);
+}
+
+.dark-text h2,
+.dark-text h3 {
   color: var(--dark);
 }
 
-.ikea-wrapper h3 {
+.light-text .article-tag {
+  color: var(--white-50);
+}
+
+.light-text h2,
+.light-text h3 {
+  color: var(--white);
+}
+
+.article-wrapper h2 {
+  margin: 4px 0;
+}
+
+.article-wrapper h3 {
   margin: 28px 0;
+}
+
+.dark-text .article-title {
+  background-color: var(--brown);
+  color: var(--white);
+}
+
+.dark-text .column-wrapper p {
   color: var(--dark);
+}
+
+.light-text .column-wrapper p {
+  color: var(--white);
+}
+
+.light-text .article-title {
+  background-color: var(--white);
+  color: var(--brown);
 }
 
 .article-title {
-  background-color: var(--brown);
-  color: var(--white);
+  display: block;
+  font-family: "Open Sans", sans-serif;
   font-size: 14px;
   text-transform: uppercase;
   font-weight: bold;
   line-height: 1.2em;
   padding: 5px 10px;
+
+  column-span: all;
+  margin-top: 0;
+  margin-bottom: 19px;
 }
 
 .column-wrapper {
@@ -278,18 +317,29 @@ p {
   column-gap: 30px;
 }
 
-.article-title {
-  column-span: all;
-  margin-top: 0;
-  margin-bottom: 19px;
+.column-wrapper p {
+  margin-bottom: 0;
 }
 
 .first-el {
   margin-top: 0;
 }
 
+.premature-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.premature-wrapper:before {
+  background-color: var(--brown);
+}
+
 .float-left {
   float: left;
+}
+
+.float-right {
+  float: right;
 }
 
 .margin-right30 {
