--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -121,8 +121,8 @@ p {
 }
 
 .header-wrapper:before,
-.ikea-wrapper:before,
-.premature-wrapper:before {
+.dark-wrapper:before,
+.light-wrapper:before {
   content: "";
   width: 100%;
   height: 100%;
@@ -130,13 +130,34 @@ p {
   position: absolute;
   left: 0;
   top: 0;
-  z-index: -1;
 
-  background-color: var(--light);
+  background-color: transparent;
   background-image: url("../../assets/images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: .9;
+  opacity: .06;
+}
+
+.header-wrapper {
+  background-color: var(--light);
+}
+
+.header-wrapper .container {
+  z-index: 2;
+}
+
+.dark-wrapper:before,
+.light-wrapper:before {
+  opacity: .06;
+  z-index: 0;
+}
+
+.dark-wrapper {
+  background-color: var(--light);
+}
+
+.light-wrapper {
+  background-color: var(--brown);
 }
 
 .header-title {
@@ -241,7 +262,8 @@ p {
   display: block;
 }
 
-.ikea-wrapper {
+.dark-wrapper,
+.light-wrapper {
   position: relative;
   overflow: hidden;
 }
@@ -328,15 +350,6 @@ p {
 
 .first-el {
   margin-top: 0;
-}
-
-.premature-wrapper {
-  position: relative;
-  overflow: hidden;
-}
-
-.premature-wrapper:before {
-  background-color: var(--brown);
 }
 
 .float-left {
