--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -308,7 +308,8 @@ a.nav-item:hover p {
   color: var(--white-50);
 }
 
-.light-text .text-white {
+.light-text .text-white,
+.text-white {
   color: var(--white);
 }
 
@@ -383,6 +384,76 @@ a.nav-item:hover p {
 }
 
 footer {
-  background-color: var(--white-50);
   overflow: hidden;
+}
+
+footer .flex {
+  padding: 38px 55px 42px;
+  box-sizing: border-box;
+  background-color: var(--main-dark);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 100px auto 76px;
+}
+
+footer .container h3 {
+  align-self: center;
+  padding-top: 10px;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: row;
+  margin-top: 7px;
+  margin-bottom: 3px;
+}
+
+.input-group input[type="text"] {
+  flex-grow: 1;
+  border: none;
+  padding: 0 15px;
+}
+
+.input-group input[type="text"]::placeholder {
+  color: #757575;
+}
+
+.contactUs {
+  flex-basis: 485px;
+}
+
+.contactUs .description {
+  margin: 0;
+  font-size: 12px;
+  line-height: 160%;
+}
+
+.contactUs label {
+  font-size: 18px;
+  font-family: "Open Sans", sans-serif;
+  line-height: 160%;
+}
+
+.contactUs button {
+  border: none;
+  width: 70px;
+  height: 50px;
+}
+
+.contactUs button:before {
+  content: url("../../assets/images/send.svg");
+}
+
+footer .container h3 {
+  margin: 0;
+}
+
+.copyright  {
+  font-size: 14px;
+  line-height: 1.75em;
+}
+
+.copyright a {
+  color: var(--blue);
 }
